--- a/client/admin/src/mealorder/components/admin-menu-dialog.html
+++ b/client/admin/src/mealorder/components/admin-menu-dialog.html
@@ -83,22 +83,28 @@
             }
 
             .buttons {
-                align-self: flex-end;
+                display: flex;
+                justify-content: flex-end;
                 margin-top: 14%
             }
 
             @media only screen and (max-width: 1024px) {
-                .add-dish-paper-dialog {
-                    max-width: 400px;
+                #dialog {
+                    min-width: 0;
+                    max-width: 450px;
                     width: 100vh;
                 }
 
                 .buttons {
-                    margin-top: 20%;
+                    margin-top: 25%;
                 }
             }
 
             @media only screen and (max-width: 660px) {
+                #title {
+                    display: none;
+                }
+
                 #dialog {
                     min-width: 0;
                     width: 100vh;
@@ -113,7 +119,7 @@
                 }
 
                 .buttons {
-                    margin-top: 45%;
+                    margin-top: 55%;
                 }
 
                 iron-list {
@@ -144,7 +150,7 @@
 
             @media only screen and (max-width: 320px) {
                 .buttons {
-                    margin-top: 30%;
+                    margin-top: 40%;
                 }
             }
 
@@ -154,7 +160,7 @@
             <div class="dialog">
                 <iron-form id="form">
                     <form>
-                        <h2>Добавить меню</h2>
+                        <h2 id="title">Добавить меню</h2>
                         <div class="inner">
                             <paper-dropdown-menu value="{{vendor}}"
                                                  label="Поставщик"
