Move menu dialog to dialog package

--- a/client/admin/src/mealorder/components/admin-vendor-menus.html
+++ b/client/admin/src/mealorder/components/admin-vendor-menus.html
@@ -23,7 +23,7 @@
 <link rel="import" href="../../../bower_components/iron-icons/iron-icons.html">
 <link rel="import" href="../../../bower_components/paper-checkbox/paper-checkbox.html">
 <link rel="import" href="./admin-vendor-menu.html">
-<link rel="import" href="./admin-menu-dialog.html">
+<link rel="import" href="../dialog/admin-menu-dialog.html">
 
 <dom-module id="admin-vendor-menus">
     <template>
