--- a/client/admin/test/mealorder/components/meal-order-vendor-menu_test.html
+++ b/client/admin/test/mealorder/components/meal-order-vendor-menu_test.html
@@ -23,59 +23,56 @@
     <meta name="viewport"
           content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=yes">
 
-    <title>meal-order-vendor-list test</title>
+    <title>admin-vendor-menu test</title>
 
     <script src="../../../bower_components/webcomponentsjs/webcomponents-loader.js"></script>
     <script src="../../../bower_components/web-component-tester/browser.js"></script>
     <script src="../../../node_modules/redux/dist/redux.js"></script>
-    <script src="../test_variables.js"></script>
-
-    <link rel="import" href="../../../src/mealorder/components/meal-order-vendor-list.html">
-    <link rel="import" href="../../../src/mealorder/dialog/meal-order-dialog-container.html">
+    <link rel="import" href="../../../src/mealorder/components/admin-vendor-menu.html">
 </head>
 <body>
 
-<test-fixture id="MealOrderVendorList">
+<test-fixture id="Menu">
     <template>
-        <meal-order-vendor-list></meal-order-vendor-list>
+        <admin-vendor-menu></admin-vendor-menu>
     </template>
 </test-fixture>
 
 <script>
-    suite('meal-order-vendor-list', function () {
+    suite('meal-order-admin-app', function () {
+        const COLLAPSED = 'collapsed';
+        const EXPANDED = 'expanded';
+        const DATE = new Date("2018-03-05");
+        const CONVERTED_DATE = "5 март '18";
         let component;
 
         setup(() => {
-            component = fixture('MealOrderVendorList');
-            component.vendors = MealOrderAdminAppTest.vendors;
+            component = fixture('Menu');
         });
 
-        test('should display vendors correctly', function () {
-            const ironList = component.shadowRoot.querySelector("iron-list");
-            assert.equal(2, ironList.items.length);
-            assert.equal("Пюре", ironList.items[0].title);
+        test('should collapse and expand on click', function () {
+            const caption = component.shadowRoot.querySelector(".menu-caption");
+            assert.equal(COLLAPSED, component.$.menu.className);
+            caption.click();
+            assert.equal(EXPANDED, component.$.menu.className);
+            assert.equal('expand-less', component.$.expand.icon);
+            caption.click();
+            assert.equal(COLLAPSED, component.$.menu.className);
         });
 
-        test('should open vendor add dialog', function (done) {
-            const mock = sinon.mock(MealOrderAdminApp.store);
-            mock.expects('dispatch');
+        test('should dispatch event to resize parent iron list on click', function () {
             flush(function () {
-                const addButton = component.shadowRoot.querySelector("#header > paper-icon-button");
-                addButton.click();
-                mock.verify();
-                done();
+                const caption = component.shadowRoot.querySelector(".menu-caption");
+                component.addEventListener('vendor-menu-resize', function () {
+                    done();
+                });
+                caption.click();
             });
         });
 
-        test('should open vendor edit dialog', function (done) {
-            const mock = sinon.mock(MealOrderAdminApp.store);
-            mock.expects('dispatch');
-            flush(function () {
-                const editButton = component.shadowRoot.querySelectorAll("iron-list .icons paper-icon-button")[0];
-                editButton.click();
-                mock.verify();
-                done();
-            });
+        test('should convert date correctly', function () {
+            const date = component._getDate(DATE);
+            assert.equal(CONVERTED_DATE, date);
         });
     });
 </script>
