--- a/client/admin/src/mealorder/components/monthly-spendings.html
+++ b/client/admin/src/mealorder/components/monthly-spendings.html
@@ -253,7 +253,7 @@
                             computed: '_getYears(monthlySpendingsStartDate, serverTime)'
                         },
                         selectedMonth: {
-                            type: Object,
+                            type: Number,
                         },
                         selectedYear: {
                             type: Object,
