--- a/client/admin/src/mealorder/components/vendor-orders.html
+++ b/client/admin/src/mealorder/components/vendor-orders.html
@@ -18,9 +18,11 @@
   ~ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
   -->
 <link rel="import" href="../../../bower_components/polymer/polymer-element.html">
+<link rel="import" href="../../../bower_components/polymer/lib/elements/dom-repeat.html">
 <link rel="import" href="../../../bower_components/paper-tabs/paper-tabs.html">
 <link rel="import" href="../../../bower_components/app-route/app-location.html">
 <link rel="import" href="../../../bower_components/app-route/app-route.html">
+<link rel="import" href="../../../bower_components/iron-pages/iron-pages.html">
 <link rel="import" href="../../../bower_components/polymer/lib/elements/dom-repeat.html">
 <link rel="import" href="../shell/redux-store.html">
 <link rel="import" href="./purchase-order/purchase-order.html">
@@ -29,16 +31,6 @@
 <dom-module id="vendor-orders">
     <template>
         <style>
-            body {
-                font-family: 'Roboto', 'Noto', sans-serif;
-                margin: 0;
-                display: flex;
-                align-items: flex-end;
-                height: 80px;
-                background: #009688;
-                color: white;
-            }
-
             paper-tabs {
                 -webkit-font-smoothing: antialiased;
                 width: 100%;
@@ -49,7 +41,6 @@
 
             paper-tabs {
                 margin: 0 auto 1% auto;
-
             }
 
             paper-tab.iron-selected .day-of-the-week {
@@ -137,7 +128,6 @@
 
             @media only screen and (max-width: 1370px) {
                 app-datepicker {
-
                     top: 60%;
                 }
             }
@@ -150,7 +140,6 @@
 
                 paper-tabs {
                     margin-top: 3%;
-
                 }
 
                 .header {
@@ -190,7 +179,8 @@
             <div name="">
                 <h1 class="header-title">Заказ поставщику</h1>
                 <div class="header">
-                    <paper-tabs on-iron-select="_getOrders" id="ptab" class="tabs" selected="[[selectedIndex]]">
+                    <paper-tabs on-iron-select="_getOrders" id="ptab" class="tabs"
+                                selected="[[selectedIndex]]">
                         <dom-repeat items="[[selectedPurchaseOrderDates]]" as="calendar">
                             <template>
                                 <dom-if if="[[calendar.hasOrder]]">
@@ -219,126 +209,135 @@
                                     auto-update-date="true"
                                     locale="ru-RU"></app-datepicker>
                 </div>
-                <purchase-order orders="[[purchaseOrders]]"> </purchase-order>
+                <purchase-order orders="[[purchaseOrders]]"></purchase-order>
             </div>
-
-            <purchase-order-details-container name="Pure"></purchase-order-details-container>
-
+            <purchase-order-details-container
+                    name="[[routeData.vendor]]"></purchase-order-details-container>
         </iron-pages>
 
     </template>
     <script>
-        class VendorOrders extends MealOrderAdminApp.ReduxMixin(Polymer.Element) {
-            static get is() {
-                return 'vendor-orders';
-            }
+        {
+            class VendorOrders extends MealOrderAdminApp.ReduxMixin(Polymer.Element) {
+                static get is() {
+                    return 'vendor-orders';
+                }
 
-            static get properties() {
-                return {
-                    serverTime: {
-                        statePath: 'serverTime'
-                    },
-                    selectedPurchaseOrderDates: {
-                        type: Array,
-                        computed: '_getSelectedPurchaseOrderDates(currentDate)',
-                        notify: true,
-                        reflectToAttribute: true,
-                    },
-                    routeDate: {
-                        type: Object,
-                    },
-                    currentDate: {
-                        type: String
-                    },
-                    selectedIndex: {
-                        type: Number,
-                        computed: '_getLastIndex(selectedPurchaseOrderDates)',
-                    },
-                    purchaseOrders: {
-                        type: Array,
-                        statePath: 'purchaseOrders'
-                    }
-                };
-            }
+                static get properties() {
+                    return {
+                        serverTime: {
+                            statePath: 'serverTime'
+                        },
+                        selectedPurchaseOrderDates: {
+                            type: Array,
+                            computed: '_getSelectedPurchaseOrderDates(currentDate)',
+                            notify: true,
+                            reflectToAttribute: true,
+                        },
+                        routeData: {
+                            type: Object,
+                        },
+                        currentDate: {
+                            type: String
+                        },
+                        selectedIndex: {
+                            type: Number,
+                            computed: '_getLastIndex(selectedPurchaseOrderDates)',
+                        },
+                        purchaseOrders: {
+                            type: Array,
+                            statePath: 'purchaseOrders'
+                        },
+                        arrayOfVendors: {
+                            type: Array,
+                            value: ["Pure", "Pozitiv"],
+                        },
+                    };
+                }
 
-            static get actions() {
-                return {
-                    getSelectedOrders: function (date) {
-                        return {
-                            type: MealOrderAdminApp.AdminActions.GET_SELECTED_ORDERS,
-                            date
+                static get actions() {
+                    return {
+                        getSelectedOrders: function (date) {
+                            return {
+                                type: MealOrderAdminApp.AdminActions.GET_SELECTED_ORDERS,
+                                date
+                            }
                         }
                     }
                 }
-            }
 
-            static get observers() {
-                return [
-                    '_pageChanged(routeData)',
-                    '_calendarDateChanged(currentDate)'
-                ];
-            }
-
-            _getOrders(e) {
-                this.dispatch('getSelectedOrders', this.selectedPurchaseOrderDates[e.target.selected]);
-            }
-
-            _getLastIndex() {
-                return this.$.ptab.selectIndex(7);
-            }
-
-            _getDay(date) {
-                return date.getDate();
-            }
-
-            _getDate(date) {
-                const DATE_LENGTH = 10;
-                return date.toISOString().slice(0, DATE_LENGTH);
-            }
-
-            _getDayOfTheWeek(date) {
-                const dayOfTheWeek = date.toLocaleDateString("ru-RU", {weekday: 'short'});
-                return dayOfTheWeek.charAt(0).toUpperCase() + dayOfTheWeek.slice(1);
-            }
-
-            _calendarDateChanged(currentDate) {
-                this.set('route.path', '/order/' + currentDate + '/');
-                this.$.picker.style = 'display:none;';
-                this.$.calendar.style.backgroundColor = 'white';
-            }
-
-            _getSelectedPurchaseOrderDates(date) {
-                const selectedDates = [];
-                const DAYS_IN_PERIOD = 8;
-                for (let i = 0; i < DAYS_IN_PERIOD; i++) {
-                    const newDate = new Date(date);
-                    newDate.setDate(newDate.getDate() - i);
-                    selectedDates.push(newDate);
-                    selectedDates[i].hasOrder = true;
+                static get observers() {
+                    return [
+                        '_pageChanged(routeData)',
+                        '_calendarDateChanged(currentDate)'
+                    ];
                 }
-                return selectedDates.reverse();
-            }
 
-            _pageChanged() {
-                if (!this.routeData.date) {
+                _getOrders(e) {
+                    this.dispatch('getSelectedOrders', this.selectedPurchaseOrderDates[e.target.selected]);
+                }
+
+                _getLastIndex() {
+                    return this.$.ptab.selectIndex(7);
+                }
+
+                _getDay(date) {
+                    return date.getDate();
+                }
+
+                _getDate(date) {
                     const DATE_LENGTH = 10;
-                    const date = this.serverTime.toISOString().slice(0, DATE_LENGTH);
-                    this.set('route.path', '/order/' + date + '/');
+                    return date.toISOString().slice(0, DATE_LENGTH);
+                }
+
+                _getDayOfTheWeek(date) {
+                    const dayOfTheWeek = date.toLocaleDateString("ru-RU", {weekday: 'short'});
+                    return dayOfTheWeek.charAt(0).toUpperCase() + dayOfTheWeek.slice(1);
+                }
+
+                _calendarDateChanged(currentDate) {
+                    if (!this.routeData.vendor) {
+                        this.set('route.path', '/order/' + currentDate + '/');
+                        this.dispatch('getSelectedOrders', new Date(currentDate));
+                        this.$.picker.style = 'display:none;';
+                        this.$.calendar.style.backgroundColor = 'white';
+                    }
+                }
+
+                _getSelectedPurchaseOrderDates(date) {
+                    const selectedDates = [];
+                    const DAYS_IN_PERIOD = 8;
+                    for (let i = 0; i < DAYS_IN_PERIOD; i++) {
+                        const newDate = new Date(date);
+                        newDate.setDate(newDate.getDate() - i);
+                        selectedDates.push(newDate);
+                        selectedDates[i].hasOrder = true;
+                    }
+                    return selectedDates.reverse();
+                }
+
+                _pageChanged() {
+                    console.log("!");
+                    if (!this.routeData.date) {
+                        const DATE_LENGTH = 10;
+                        const date = this.serverTime.toISOString().slice(0, DATE_LENGTH);
+                        this.set('route.path', '/order/' + date + '/');
+                    }
+                }
+
+                openDatePicker() {
+                    if (this.$.picker.style.display !== 'inline') {
+                        this.$.calendar.style.backgroundColor = '#0085d3';
+                        this.$.picker.style = 'display:inline;';
+                    }
+                    else {
+                        this.$.picker.style = 'display:none;';
+                        this.$.calendar.style.backgroundColor = 'white';
+                    }
                 }
             }
 
-            openDatePicker() {
-                if (this.$.picker.style.display !== 'inline') {
-                    this.$.calendar.style.backgroundColor = '#0085d3';
-                    this.$.picker.style = 'display:inline;';
-                }
-                else {
-                    this.$.picker.style = 'display:none;';
-                    this.$.calendar.style.backgroundColor = 'white';
-                }
-            }
+            window.customElements.define(VendorOrders.is, VendorOrders);
         }
-
-        window.customElements.define(VendorOrders.is, VendorOrders);
     </script>
 </dom-module>
