--- a/client/admin/src/mealorder/components/purchase-order/purchase-order.html
+++ b/client/admin/src/mealorder/components/purchase-order/purchase-order.html
@@ -30,7 +30,6 @@
                 padding: 0;
             }
 
-
             paper-item {
                 width: 100%;
             }
@@ -47,21 +46,24 @@
                 background-color: #f2f2f2;
             }
 
-            .item {
-                @apply --layout-horizontal;
+            .items {
                 display: flex;
-                background-color: white;
-                border: 1px solid #ddd;
-                cursor: pointer;
+                border-bottom: 1px solid #ddd;
                 justify-content: space-between;
+                background-color: white;
+                cursor: pointer;
                 align-items: center;
                 height: 50px;
                 padding-left: 2%;
+                text-decoration: none;
+                color: var(--google-grey-700);
             }
 
-            .item:hover .text {
+            .items:hover .text {
                 display: block;
-                text-decoration: none;
+                text-decoration: underline;
+                text-decoration-style: dashed;
+                text-decoration-color: var(--google-grey-700);
                 color: var(--google-grey-700);
             }
 
@@ -72,7 +74,6 @@
                 -moz-user-select: none; /* Firefox */
                 -ms-user-select: none; /* Internet Explorer/Edge */
                 user-select: none;
-
                 /* Non-prefixed version, currently supported by Chrome and Opera */
             }
 
@@ -86,70 +87,60 @@
             }
 
             .vendor-name {
-                width: 25%;
+                width: 35%;
             }
 
             .date {
-                width: 30%;
+                width: 35%;
                 text-align: left;
             }
 
             .status {
-                width: 30%;
+                width: 20%;
                 text-align: left;
             }
 
-            .correct::after {
-                color: #0085d3;
-                content: 'Отправленный';
-            }
-
-            .incorrect::after {
-                color: #af0000;
-                content: 'Некорректный';
-            }
-
             .details {
-                width: 15%;
+                width: 20%;
                 font-size: 14px;
             }
 
             .details .text {
+                padding-left: 20%;
                 display: none;
             }
 
+            .correct::after {
+                color: #00a3ff;
+                content: 'Отправленный';
+            }
+
+            .incorrect::after {
+                color: #ff0000;
+                content: 'Некорректный';
+            }
 
             @media only screen and (max-width: 1024px) {
+                .details {
+                    display: none;
+                }
+
                 .main-content {
                     width: 100%;
                 }
-            }
-
-            @media only screen and (max-width: 600px) {
-
-                .main-content {
-
-                }
 
                 .vendor-name {
-                    width: 35%;
+                    width: 33.3%;
                 }
 
                 .date {
-                    width: 20%;
-                    text-align: left;
+                    width: 33.3%;
                 }
 
                 .status {
-                    width: 30%;
-                    text-align: left;
-                }
-
-                .details {
-                    text-align: right;
+                    width: 33.3%;
                 }
             }
-
 
         </style>
 
@@ -163,39 +154,38 @@
                 tail="{{subroute}}">
         </app-route>
 
-            <iron-pages
-                    selected="[[routeData.vendor]]"
-                    attr-for-selected="name"
-                    fallback-selection="view404"
-                    role="main">
+        <iron-pages
+                selected="[[routeData.vendor]]"
+                attr-for-selected="name"
+                fallback-selection="view404"
+                role="main">
 
-                <div class="main-content" name="">
-                    <div class="non-select header">
-                        <div class="vendor-name">Поставщик</div>
-                        <div class="date">Дата</div>
-                        <div class="status">Статус</div>
-                        <div class="details"></div>
-                    </div>
-                    <iron-list id="list" items="[[orders]]" as="PO" scroll-target="document" scroll-offset="200">
-                        <template>
-                            <div class="non-select">
-                                <div class="item">
-                                    <div class="vendor-name">[[PO.title]]</div>
-                                    <div class="date">[[_getDate(PO.date)]]</div>
-                                    <div class="status">
-                                        <div class$="[[_getClassForStatus(PO)]]"></div>
-                                    </div>
-                                    <div class="details">
-                                        <a href="#/order/[[routeData.date]]/[[PO.id]]/byDishes" class="text">
-                                            Детали
-                                        </a>
-                                    </div>
+            <div class="main-content" name="">
+                <div class="non-select header">
+                    <div class="vendor-name">Поставщик</div>
+                    <div class="date">Дата</div>
+                    <div class="status">Статус</div>
+                    <div class="details"></div>
+                </div>
+                <iron-list id="list" items="[[orders]]" as="PO" scroll-target="document"
+                           scroll-offset="200" selection-enabled>
+                    <template>
+                        <a href="#/order/[[routeData.date]]/[[PO.id]]/byDishes" class="items">
+                            <div class="vendor-name">[[PO.title]]</div>
+                            <div class="date">[[_getDate(PO.date)]]</div>
+                            <div class="status">
+                                <div class$="[[_getClassForStatus(PO)]]"></div>
+                            </div>
+                            <div class="details">
+                                <div class="text">
+                                    Детали
                                 </div>
                             </div>
-                        </template>
-                    </iron-list>
-                </div>
-            </iron-pages>
+                        </a>
+                    </template>
+                </iron-list>
+            </div>
+        </iron-pages>
     </template>
     <script>
         {
